--- a/.eslintrc
+++ b/.eslintrc
@@ -3,16 +3,17 @@
   "ecmaVersion": 2017,
   "sourceType": "module"
   },
-  "extends": "eslint:recommended",
-  "env": {
-    "es6": true,
-    "browser": true,
-    "jquery": true
-    },
-    "rules": {
-      "semi": 1,
-      "indent": ["warn", 2],
-      "no-console": "warn",
-      "no-debugger": "warn"
-    }
-    }
+"extends": "eslint:recommended",
+"env": {
+  "es6": true,
+  "browser": true,
+  "jquery": true
+  },
+"rules": {
+  "semi": 1,
+  "indent": ["warn", 2],
+  "no-console": "warn",
+  "no-debugger": "warn",
+  "no-unused-vars": "warn"
+  }
+}
